header alignment issue has been fixed

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -216,11 +216,11 @@ header {
                             background-color: $projectlightGrey;
                             border-radius: 0;
                             border: 0;
-                            width: 1170px;
+                            width: 1140px;
                             margin: 0 auto;
                             left: 0;
                             right: 0;
-                            padding: 5rem 2rem;
+                            padding: 1.5rem;
                         }
 
                         > ul {
@@ -239,6 +239,7 @@ header {
                                             color: $projectlighterGrey;
                                             text-transform: none;
                                             display: block;
+                                            padding: 1.2rem 0;
 
                                             &:hover,
                                             &:focus {
@@ -464,7 +465,7 @@ header {
                     li {
                         &.open {
                             .dropdown-menu {
-                                width: 970px;
+                                width: 940px;
                             }
 
                             &.menu-sm {
@@ -531,7 +532,7 @@ header {
 
                         &.open {
                             .dropdown-menu {
-                                width: 750px;
+                                width: 720px;
                             }
                         }
                     }
@@ -676,6 +677,7 @@ header {
                                 padding: 0;
 
                                 li {
+                                    display: block !important;
                                     padding: 0;
                                     width: 100%;
 
@@ -708,6 +710,10 @@ header {
                                                 }
                                             }
                                         }
+                                    }
+
+                                    a {
+                                        padding: 1.3rem 1.5rem 1.5rem;
                                     }
                                 }
                             }
